<resources>
    <string name="app_name">Khayar</string>
    <string name="action_settings">Settings</string>
    <string name="retry">Retry</string>
    <string name="unknown_error">Unknown Error</string>
    <string name="action_bar_title_hello">Hello</string>
    <string name="ak_login_protocol_scheme" translatable="false">ak964234977027033</string>
    <string name="app_id" translatable="false">1898543293538419</string>
    <string name="client_token" translatable="false">01cd96b7acb13d2c175fb0d3c4550ea9</string>
    <string name="FACEBOOK_APP_ID" translatable="false">1898543293538419</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN" translatable="false">01cd96b7acb13d2c175fb0d3c4550ea9</string>
    <string name="permissions_get_accounts_message">
        Grant permission to read your email address from your device to pre-fill.
    </string>
    <string name="permissions_get_accounts_title">Read Email Address</string>
    <string name="permissions_read_phone_state_message">
        Grant permission to read your phone number from your device to pre-fill.
    </string>
    <string name="permissions_read_phone_state_title">Read Phone Number</string>
    <string name="permissions_receive_sms_message">
        Grant permission to read your SMS code from your device to pre-fill.
    </string>
    <string name="permissions_receive_sms_title">Read SMS Code</string>
    <string name="log_in_email_button">Log In via Email</string>
    <string name="log_in_phone_button">Log In via Phone</string>
    <string name="log_out_button">Log Out</string>
    <string name="error_label">Error</string>
    <string name="loading_placeholder">Loading&#8230;</string>
    <string name="user_id_label">Account ID</string>
    <string name="phone_number_label">Phone Number</string>
    <string name="email_label">Email</string>
    <string name="na">NA</string>
    <string name="login">Login</string>
    <string name="or">OR</string>
    <string name="continue_facebook">Continue with Facebook</string>
    <string name="user_name">Username</string>
    <string name="phone_no">Phone number 959xxxxx</string>
    <string name="create_account">Create new account</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="name">Name</string>
    <string name="pls_enter_name">Please enter name</string>
    <string name="pls_enter_email">Please enter email</string>
    <string name="pls_enter_password">Please enter password</string>
    <string name="pls_enter_phone">Please enter phone</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="pls_enter_fname">Please enter first name</string>
    <string name="pls_enter_lname">Please enter last name</string>
    <string name="invalid_authenticate">Invalid Authentication</string>
    <string name="try_again">Try Again</string>
    <string name="invalid_value">Invalid Value</string>
    <string name="email_phone">Phone number 959xxxxx</string>
    <string name="change_password">Change Password</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="edit_account">Edit Account</string>
    <string name="pls_enter_new_password">Please enter new password</string>
    <string name="pls_enter_confirm_password">Please enter confirm password</string>
    <string name="pls_match_confirm_password">Don\'t match two passwords</string>
    <string name="profile">Profile</string>
    <string name="gender">Gender</string>
    <string name="points">Points</string>
    <string name="lbl_head_1">With Khayar, you are safe more than ever \n
Because your friends can virtually: \n - walk you home \n - keep an eyey on you \n - help you when you are in trouble</string>
    <string name="lbl_head_2">keep an eye on you and senses</string>
    <string name="lbl_head_3">if something is wrong</string>
    <string name="rationale_all_permissions">We would like to request your permission for our app function .</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Hello, Guest</string>
    <string name="nav_header_subtitle">Please login your account</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="search">Search %1$s</string>
    <string name="menu_1">Nearby Map</string>
    <string name="menu_2">Lawer List</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="default_notification_channel_name">News</string>
    <string name="notifications_admin_channel_name">Global channel</string>
    <string name="notifications_admin_channel_description">Notifications sent from the app admin</string>
    <string name="noti_title">Khayar</string>
    <string name="noti_text">Khayar</string>
    <string name="action_logout">Logout</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_circle_trust">Circle of Trust</string>
    <string name="menu_map">Map</string>
    <string name="menu_record">Record</string>
    <string name="menu_directory">Directory</string>
    <string name="menu_fake_call">Fake Call</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_about_us">About Us</string>
    <string name="menu_share">Share</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_bell">Alarm System</string>
    <string name="Submit">Submit</string>
    <string name="settings">Settings</string>
    <string name="save">Save</string>
    <string name="version">Version</string>
    <string name="language">Language</string>
    <string name="myanmar">Myanmar</string>
    <string name="fonts">Font</string>
    <string name="choose_language">Choose Language</string>
    <string name="defaults">Default</string>
    <string name="zawgyi">Zawgyi</string>
    <string name="unicode">Unicode</string>
    <string name="action_call">Call Phone</string>
    <string name="action_sms">Emergnency Sms</string>
    <string name="action_sms_custon">Custom Sms</string>
    <string name="remind_forgot_pwd">If you forgot your password, you can login with your phone number which used in Facebook</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, an sit fugit officiis deserunt, audiam disputando at sit. Eu mel expetenda voluptatibus. Ius no accusam scripserit.\n\n Sea error iracundia ne, duo ne dicat partem sententiae. Nibh admodum facilisi ius in. Ius legere intellegam ei, in zril deserunt qui.At alii audire scripta mea, errem disputando quo
    </string>
    <string name="detail_desc_lbl">Information</string>
    <string name="add_user">Add Trusted Person</string>
    <string name="detais_similar_place_lbl">Similar places</string>
    <string name="coming_soon">COMING SOON</string>
    <string name="send_a_message">Send a message</string>
    <string name="enter_message_here">Enter message here</string>
    <string name="enter_phone">Enter a phone number</string>
    <string name="permission_not_granted">PERMISSION NOT GRANTED!</string>
    <string name="failure_permission">Failure to obtain permission!</string>
    <string name="sms_disabled">SMS usage disabled</string>
    <string name="not_active_user">Your account is not active</string>
    <string name="action_remove">Remove</string>
    <string name="comment">Comment</string>
    <string name="rating">Rating</string>
    <string name="help_us">Feedback</string>
    <string name="required">Required</string>
    <string name="invalid_rating_value">Please set rating value</string>
    <string name="str_yes_i">Yes, OK</string>
    <string name="invalid_comment_value">Please enter your comment</string>
    <string name="send">Send</string>
    <string name="success">Success</string>
    <string name="success_feedback_msg">Thank you for your feedback</string>
    <string name="str_sound_on_off">On/Off Alert Sound</string>
    <string name="title_activity_person">PersonActivity</string>
    <string name="send_feedback">Send</string>
</resources>