<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_add_user"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:theme="@style/AppTheme.AppBarOverlay" />

    <LinearLayout
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_width="300dp"
        android:layout_height="wrap_content">

        <com.khayah.app.ui.widget.CustomTextView
            android:textAppearance="@android:style/TextAppearance.Large"
            android:text="@string/add_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/com.khayah.app.ui.widget.CustomTextView"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_marginTop="30dp"
            android:id="@+id/edt_name"
            android:hint="@string/name"
            android:inputType="textPersonName"
            app:met_floatingLabel="highlight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_marginTop="16dp"
            android:id="@+id/edt_phone_number"
            android:hint="@string/phone_no"
            android:inputType="textPhonetic"
            app:met_floatingLabel="highlight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_add_user"
            android:layout_marginTop="20dp"
            android:text="@string/save"
            android:foreground="?android:attr/selectableItemBackground"
            android:background="@drawable/btn_primary"
            android:textColor="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <include layout="@layout/content_loading" />

</RelativeLayout>
