<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.khayah.app.ui.widget.CustomTextView
            android:layout_marginTop="16dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rating" />

        <RatingBar
            android:layout_marginTop="10dp"
            android:id="@+id/ratings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5" />

        <com.khayah.app.ui.widget.CustomTextView
            android:layout_marginTop="16dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/comment" />

        <EditText
            android:id="@+id/edt_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:minLines="10"
            android:gravity="start"
            android:background="@android:color/transparent"
            android:inputType="textMultiLine" />

        <Button
            android:id="@+id/btn_send"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/theme_primary"
            android:textColor="@color/white"
            android:textAllCaps="true"
            android:text="@string/send_feedback" />

    </LinearLayout>

    <include layout="@layout/content_loading" />

</RelativeLayout>