<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent">
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp">

        <com.khayah.app.ui.widget.CustomTextView
            android:padding="10dp"
            android:gravity="center"
            android:textSize="32sp"
            android:textAllCaps="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/login" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            android:padding="5dp" >

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_phone"
                android:inputType="textEmailAddress"
                app:met_floatingLabel="highlight" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                app:met_floatingLabel="highlight" />

            <Button
                android:layout_marginTop="16dp"
                android:id="@+id/btn_login"
                android:layout_centerInParent="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foreground="?android:attr/selectableItemBackground"
                android:background="@drawable/btn_primary"
                android:text="@string/login"
                android:textColor="@android:color/white" />

            <LinearLayout
                android:id="@+id/layout_divider"
                android:layout_below="@+id/btn_passenger_login"
                android:layout_marginTop="18dp"
                android:layout_marginBottom="18dp"
                android:orientation="horizontal"
                android:layout_width="300dp"
                android:gravity="center_vertical"
                android:layout_centerHorizontal="true"
                android:layout_height="wrap_content">
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray"
                    android:layout_weight="40"/>
                <com.khayah.app.ui.widget.CustomTextView
                    android:layout_weight="10"
                    android:text="@string/or"
                    android:layout_width="100dp"
                    android:gravity="center"
                    android:layout_height="wrap_content" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray"
                    android:layout_weight="40"/>
            </LinearLayout>
            <RelativeLayout
                android:padding="10dp"
                android:elevation="5dp"
                android:id="@+id/layout_login_facebook"
                android:foreground="?android:attr/selectableItemBackground"
                android:background="@drawable/btn_facebook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.mikepenz.iconics.view.IconicsImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_centerVertical="true"
                    app:iiv_color="@android:color/white"
                    app:iiv_icon="cmd_facebook"/>
                <com.khayah.app.ui.widget.CustomTextView
                    android:layout_centerInParent="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:background="@android:color/transparent"
                    android:text="@string/continue_facebook"
                    android:textColor="@android:color/white" />
            </RelativeLayout>
            <com.facebook.login.widget.LoginButton
                android:id="@+id/btn_facebook"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:layout_gravity="center_horizontal"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="60dp" />
            <com.khayah.app.ui.widget.CustomTextView
                android:layout_width="match_parent"
                android:padding="@dimen/spacing_double"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/remind_forgot_pwd"
                android:textColor="@color/theme_primary" />

        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_marginBottom="16dp"
        android:id="@+id/btn_create"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foreground="?android:attr/selectableItemBackground"
        android:background="@android:color/transparent"
        android:text="@string/create_account"
        android:textColor="@color/theme_primary" />

    <include layout="@layout/content_loading"/>

</RelativeLayout>
